# pacpl

./: ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  codecs.conf  configure  configure.ac  pacpl  pacpl.conf  slack-desc
extra/: README.extra  ffmpeg-conf.sh  libav-conf.sh  mod-install-ubuntu.sh  mod-install.sh
plugins/d3lphin/: pacpl.desktop
plugins/dolphin/: pacpl.desktop
po/: GR.po  ca.po  de.po  en_US.po  es.po  et.po  fr_FR.po  it_IT.po  nl_NL.po  pl.po  pt.po  ro.po  ru_RU.po  tr.po  zh_CN.po
